<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/dashboardFragment"
        android:icon="@drawable/ic_view_dashboard"
        android:title="@string/dashboard_title" />

    <item
        android:id="@+id/subjectsFragment"
        android:icon="@drawable/ic_notebook"
        android:title="@string/subjects_title" />

    <item
        android:id="@+id/academicTermsListFragment"
        android:icon="@drawable/ic_calendar_clock"
        android:title="@string/academicterm_list_title" />

    <item
        android:id="@+id/instructorsFragment"
        android:icon="@drawable/ic_teach"
        android:title="@string/instructors_title" />

    <item
        android:id="@+id/sessionsFragment"
        android:icon="@drawable/ic_timer"
        android:title="@string/sessions_title" />

    <item
        android:id="@+id/gradesFragment"
        android:icon="@drawable/ic_clipboard_check_outline"
        android:title="@string/grades_title" />
</menu>