<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/dashboardFragment">

    <fragment
        android:id="@+id/academicTermsListFragment"
        android:name="com.kevintresuelo.escuela.screens.academicterms.AcademicTermsListFragment"
        android:label="@string/academicterm_list_title"
        tools:layout="@layout/fragment_generic_list" >
        <action
            android:id="@+id/action_academicTermsListFragment_to_editAcademicTermFragment"
            app:destination="@id/academicTermFragment" />
    </fragment>
    <fragment
        android:id="@+id/dashboardFragment"
        android:name="com.kevintresuelo.escuela.screens.dashboard.DashboardFragment"
        android:label="@string/dashboard_title" >
        <action
            android:id="@+id/action_dashboardFragment_to_academicTermsFragment"
            app:destination="@id/academicTermsListFragment" />
        <action
            android:id="@+id/action_dashboardFragment_to_subjectsFragment"
            app:destination="@id/subjectsFragment" />
        <action
            android:id="@+id/action_dashboardFragment_to_instructorsFragment"
            app:destination="@id/instructorsFragment" />
        <action
            android:id="@+id/action_dashboardFragment_to_sessionsFragment"
            app:destination="@id/sessionsFragment" />
        <action
            android:id="@+id/action_dashboardFragment_to_gradesFragment"
            app:destination="@id/gradesFragment" />
    </fragment>
    <fragment
        android:id="@+id/subjectsFragment"
        android:name="com.kevintresuelo.escuela.screens.subjects.SubjectsFragment"
        android:label="@string/subjects_title"
        tools:layout="@layout/fragment_subjects" />
    <fragment
        android:id="@+id/instructorsFragment"
        android:name="com.kevintresuelo.escuela.screens.instructors.InstructorsFragment"
        android:label="@string/instructors_title"
        tools:layout="@layout/fragment_instructors" />
    <fragment
        android:id="@+id/gradesFragment"
        android:name="com.kevintresuelo.escuela.screens.grades.GradesFragment"
        android:label="@string/grades_title"
        tools:layout="@layout/fragment_grades" />
    <fragment
        android:id="@+id/sessionsFragment"
        android:name="com.kevintresuelo.escuela.screens.sessions.SessionsFragment"
        android:label="@string/sessions_title"
        tools:layout="@layout/fragment_sessions" />
    <fragment
        android:id="@+id/academicTermFragment"
        android:name="com.kevintresuelo.escuela.screens.academicterms.AcademicTermFragment"
        android:label="@string/academicterm_title_add"
        tools:layout="@layout/fragment_academic_term" >
        <argument
            android:name="academicTermId"
            app:argType="long" />
    </fragment>
</navigation>