<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".screens.academicterms.AcademicTermFragment">

    <data>
        <variable
            name="academicTermViewModel"
            type="com.kevintresuelo.escuela.screens.academicterms.AcademicTermViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/fest_constraint_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/padding_spacer">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/fest_text_input_layout_academic_term_alias"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/academicterm_alias_hint"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/Widget.EscuelaTheme.TextInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/fest_text_input_edit_text_academic_term_alias"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/fest_text_input_layout_academic_term_covered_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/academicterm_date_covered_hint"
            android:layout_marginTop="@dimen/padding_spacer"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fest_text_input_layout_academic_term_alias"
            style="@style/Widget.EscuelaTheme.TextInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/fest_text_input_edit_text_academic_term_covered_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <CheckBox
            android:id="@+id/fest_check_box_academic_term_is_active"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/academicterm_active_academic_term_hint"
            android:layout_marginTop="@dimen/padding_spacer"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fest_text_input_layout_academic_term_covered_date" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>